@@ -8,7 +8,9 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.mockito.BDDMockito.given;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -27,11 +29,18 @@ class HolidayControllerTest {
 
     @Test
     void testGetAllHolidays() throws Exception {
-        List<Object> mockHolidays = Arrays.asList(new Object(), new Object());
-        given(holidayService.getLithuanianHolidays()).willReturn(mockHolidays);
+        // This is already a list with 2 maps
+        List<Map<String, Object>> mockHolidays = Arrays.asList(
+                Map.of("date", "2025-01-01", "localName", "New Year's Day"),
+                Map.of("date", "2025-02-16", "localName", "Lithuanian Independence Day")
+        );
+        given(holidayService.getLithuanianHolidays()).willReturn(List.of(mockHolidays.toArray()));
+
 
         mockMvc.perform(get("/holidays"))
                 .andExpect(status().isOk())
+                // Expect 2 items at the top level
                 .andExpect(jsonPath("$.length()").value(2));
     }
+
 }
